--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -30,12 +30,9 @@
                 </div> -->
 
 
-                <form name="generateform" method="POST" action="/"> <!-- class="form-inline"> -->
+                <form name="generateform" id="generateform" method="POST" action="/"> <!-- class="form-inline"> -->
+
                     <div class="form-group row">
-                        <!-- <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-                        <div class="col-sm-10">
-                          <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
-                        </div> -->
                         <div class="form-group">
                             <label class="sr-only" for="name">Name</label>
                             <input type="text" class="form-control mb-1 mr-sm-1" id="name" name="name" placeholder="Jane Doe" required  >
@@ -49,20 +46,56 @@
                             <label class="sr-only" for="occupation">Occupation</label>
                             <input type="text" class="form-control mb-1 mr-sm-1" id="occupation" name="occupation" placeholder="Occupation" required>
                         </div>
-                        
                       </div>
+
+                        <p>Fidelity</p>
+                        <div class="btn-group" data-toggle="buttons">
+                            
+                            
+                            <label class="btn btn-danger">
+                                <input type="radio" name="fidelity" id="fidelity_0" value="0" autocomplete="off" chacked>
+                                <span class="glyphicon glyphicon-ok">None</span>
+                            </label>
+
+                            <label class="btn btn-warning">
+                                <input type="radio" name="fidelity" id="fidelity_1" value="1"  autocomplete="off">
+                                <span class="glyphicon glyphicon-ok">Minimal</span>
+                            </label>
+
+                            <label class="btn btn-info">
+                                <input type="radio" name="fidelity" id="fidelity_2" value="2" autocomplete="off" checked="checked">
+                                <span class="glyphicon glyphicon-ok">Good</span>
+                            </label>
+
+                            <!-- </label> -->
+
+                            <label class="btn btn-success active">
+                                <input type="radio" name="fidelity" id="fidelity_3" value="3" autocomplete="off">
+                                <span class="glyphicon glyphicon-ok">Full</span>
+                            </label>
+                          </div>
+
                       <div class="form-group row float-sm-right">
+
                         <div class="col-sm-auto">
-                            <button class="btn btn-light mb-1">Randomize</button>
+                            <input type="submit" name="action" value="Generate" class="btn btn-primary mb-1"></input>
                         </div>
-                        <div class="col-sm-auto">
-                            <button type="submit" class="btn btn-primary mb-1">Generate</button>
-                        </div>
-                      </div>
+
                     
                   </form>
 
-                  <div class="container">           
+
+                <!-- <form name="randomizeform" id="randomizeform" method="GET"> -->
+
+                     <div class="col-sm-auto">
+                        <input type="submit" id="randomize-button" name="action" value="Randomize" class="btn btn-dark mb-1"></input>
+                    </div>
+
+                <!-- </form> -->
+
+
+               
+                  <!-- <div class="container">           
 
                 <div class="well well-sm text-center">
 
@@ -82,7 +115,7 @@
 
                         <label class="btn btn-info">
                             <input type="radio" name="options" id="option2" autocomplete="off">
-                            <span class="glyphicon glyphicon-ok">Fairly good</span>
+                            <span class="glyphicon glyphicon-ok">Good</span>
                         </label>
 
                         </label>
@@ -92,16 +125,16 @@
                             <span class="glyphicon glyphicon-ok">Full</span>
                         </label>
                     
-                    </div>
+                    </div> 
 
 
-                </div>
+                </div>-->
 
             </div>
 
                   <hr>
 
-                  <div class="my-5">
+                  <div id="biography" class="my-5">
                       <p class="text-justify">Victorio Presentario was a venetian researcher who was granted large funds. [SEP] His financial information comes from the compilation of documents and financial records of the Republic of Venice. His publications include:  A Catalogue of Venetian Authors, Volume 1, A Catalogue of Venetian Authors, Volume 2, A Catalogue of Venetian Artists, Volume 3, A Catalogue of Venetian Artists, Volume 4, and A Catalogue of Venetian Composers.     Presentario was born in Venice in 1524. He is first heard of in 1549, when he published a list of forty composers who had been issued between 1547 and 1563, and were either men of learning or of excellent family. Presentario's list is one of the earliest sources to document the number of composers of Venetian origin. Within the context of the early musical genre, presentario was a pioneer of the presentantian School, which was later followed by many composers of Venetian origin, including Giovanni Benedetto Ferrari, Filippo Zaniberti, Paolo Veronese and Andrea Gabrieli. The use of presentational techniques by composers from abroad was also an important factor in influencing the Venetian compositional style.</p>
                   </div>
             </div>
@@ -111,114 +144,109 @@
         </div>
     </div>
     	
-                <!-- <div class="msg-group center">
-                	
-                    <div class="card">
-                         <div class="card-body">
-                             <h6 class="card-subtitle mb-2 text-muted text-left">yingshaoxo</h6>
-                             <p class="card-text float-left">Hi ~</p>
-                         </div>
-                    </div>
-                      
-                    <div class="card">
-                         <div class="card-body">
-                             <h6 class="card-subtitle mb-2 text-muted text-right">yingshaoxo</h6>
-                             <p class="card-text float-right">Welcome to here!</p>
-                         </div>
-                    </div>                      
-                   
-                </div>
-                
-                <div class="input-group">
-                	<textarea id="input-box" class="form-control" rows="1" placeholder="Say something..."></textarea>
-                    <span class="input-group-btn">
-                        <button class="btn btn-secondary" type="button">send</button>
-                    </span>
-               </div> 
-    </div>-->
-
-<!-- <script>
-    var button = document.querySelector('form[name="generateform"] > button');
-    button.addEventListener(function() {
-      document.querySelector("form[name="generateform"]").submit();
-    });
-</script> -->
 
 <!-- jQuery & Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
+<!-- Scripts to update the page content with server's response -->
+<!-- <script>
+function ajaxSend() {
+    //Input element
+    var input = document.getElementById('randomize-button'); 
+    //Content element to show message later
+    var content = document.getElementById('biography'); 
+
+    var xhr = new XMLHttpRequest(); //New object created
+    
+    //Check for state change of this object.
+    xhr.onreadystatechange = function() {
+        // $('#biography p').html("<p>Success!</p>");
+        // if(this.readyState === 4 && this.status === 200) {
+        //     //If status is 200, show success.
+        //     // content.innerHTML = this.response; 
+        //     // content.innerHTML = this.response; 
+        //     $('#biography p').html( this.responseText );
+        // } else if(this.status === 400) {
+        //     //If status is 400, show failure
+        //     content.innerHTML = "<p>Failed.</p>"; 
+
+        // } else {
+        //     //Else show working on webpage.
+        //     content.innerHTML = "<p>Working...</p>" ; 
+        // }
+        $('#biography p').html( "Hi" );
+    }
+    //Open a POST request to send data
+    xhr.open('GET', '/', true); 
+    //Send the input in query url
+    xhr.send(); 
+}
+</script> -->
+
+<!-- Generate -->
 <script>
-    // class chat_control {
-    //     constructor() {
-    //         this.msg_list = $('.msg-group');
-    //     }
+    (function($){
+        function processForm( e ){
+            $.ajax({
+                url: '/',
+                dataType: 'text',
+                type: 'post',
+                contentType: 'application/x-www-form-urlencoded',
+                // contentType: 'application/json',
+                data: $(this).serialize(),
+                success: function( data, textStatus, jQxhr ){
+                    $('#biography p').html( data );
+                },
+                error: function( jqXhr, textStatus, errorThrown ){
+                    console.log( errorThrown );
+                }
+            });
 
-    //     send_msg(name, msg) {
-    //         this.msg_list.append(this.get_msg_html(name, msg, 'right'));
-    //         this.scroll_to_bottom(); 
-    //     }
+            e.preventDefault();
+        }
 
-    //     receive_msg(name, msg) {
-    //         this.msg_list.append(this.get_msg_html(name, msg, 'left'));
-    //         this.scroll_to_bottom(); 
-    //     }
+        $('#generateform').submit( processForm );
+    })(jQuery);
+</script>
 
-    //     get_msg_html(name, msg, side) {
-    //         var msg_temple = `
-    //             <div class="card">
-    //                  <div class="card-body">
-    //                      <h6 class="card-subtitle mb-2 text-muted text-${side}">${name}</h6>
-    //                      <p class="card-text float-${side}">${msg}</p>
-    //                  </div>
-    //             </div>
-    //             `;
-    //         return msg_temple;
-    //     }
+<!-- Randomize -->
+<!-- <script>
+    (function($){
+        function processForm( e ){
+            $.ajax({
+                url: '/',
+                dataType: 'text',
+                type: 'get',
+                contentType: 'application/x-www-form-urlencoded',
+                // contentType: 'application/json',
+                data: $(this).serialize(),
+                success: function( data, textStatus, jQxhr ){
+                    $('#biography p').html( data );
+                },
+                error: function( jqXhr, textStatus, errorThrown ){
+                    console.log( errorThrown );
+                }
+            });
 
-    //     scroll_to_bottom() {
-    //         this.msg_list.scrollTop(this.msg_list[0].scrollHeight);
-    //     }
-    // }
+            e.preventDefault();
+        }
 
+        $('#randomizeform').submit( processForm );
+    })(jQuery);
+</script> -->
 
-    // var chat = new chat_control();
-    // chat.receive_msg('yingshaoxo', 'This was made for you! \`2017/(520*1314)\`');
-
-    // send_button = $('button') // get jquery element from html table name
-    // input_box = $('#input-box') // get jquery element from div id
-    // // also you could get it by $('.form-control') or $('textarea')
-
-    // function handle_msg(msg) {
-    //     msg = msg.trim()
-    //     msg = msg.replace(/(?:\r\n|\r|\n)/g, '<br>')
-    //     return msg
-    // }
-
-    // function send_msg() {
-    //     msg = handle_msg(input_box.val());
-    //     if (msg != '') {
-    //         chat.send_msg('you', msg);
-    //         input_box.val('');
-
-    //         setTimeout(function(){ chat.receive_msg('yingshaoxo', 'I can hear you.'); }, 1000);
-    //         MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
-    //     }
-    // }
-
-    // function box_key_pressing() {
-    //     // control + enter was pressed
-    //     if ((event.keyCode === 10 || event.keyCode === 13) && event.ctrlKey) {
-    //         send_msg();
-    //     }
-    //     // esc was pressed
-    //     if (event.keyCode === 27) {
-    //         input_box.blur();
-    //     }
-    // }
-
-    // send_button.on('click', send_msg.bind());
-    // input_box.on('keyup', box_key_pressing.bind());
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+$(document).ready(function(){
+    $("#randomize-button").click(function(){
+        $.get("/random", function(data){
+            // Display the returned data in browser
+            $("#biography p").html(data);
+        });
+    });
+});
 </script>
 
   </body>
