--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title> Venetian biographies </title>
+        <title> Venetian biographies </title>
 
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/main.css') }}">
-</head>
+        <link rel="stylesheet" href="{{ url_for('static', filename= 'css/main.css') }}">
+    </head>
   <body>
     
     <div id="colorsplash"></div>
@@ -20,6 +20,8 @@
     <div class="container-md">
         <div class="row">
             <div class="col">
+
+
                 <div class="mx-auto my-5">
                     <h1>A Venice you've never visited before</h1>
                     <p class="lead">Jump into a fictional past, by generating biographies of imaginary Venetian lifes.</p>
@@ -42,105 +44,69 @@
                             <input type="text" readonly class="form-control-plaintext" id="middlePrompt" value="was a venetian">
                         </div>
 
-                        <div class="col-sm-6">
+                        <div class="col-sm-5">
                             <label class="sr-only" for="occupation">Occupation</label>
                             <input type="text" class="form-control mb-1 mr-sm-1" id="occupation" name="occupation" placeholder="Occupation" required>
                         </div>
-                      </div>
 
-                        <p>Fidelity</p>
-                        <div class="btn-group" data-toggle="buttons">
-                            
-                            
-                            <label class="btn btn-danger">
-                                <input type="radio" name="fidelity" id="fidelity_0" value="0" autocomplete="off" chacked>
-                                <span class="glyphicon glyphicon-ok">None</span>
-                            </label>
+                        <!-- <div class="form-group row float-sm-right"> -->
 
-                            <label class="btn btn-warning">
-                                <input type="radio" name="fidelity" id="fidelity_1" value="1"  autocomplete="off">
-                                <span class="glyphicon glyphicon-ok">Minimal</span>
-                            </label>
+                            <!-- <div class="col-sm-auto "> -->
+                                <input type="submit" name="action" value="Generate" class="btn btn-primary mb-1" style="position: absolute; right: 0;"></input>
+                            <!-- </div> -->
+                        <!-- </div> -->
 
-                            <label class="btn btn-info">
-                                <input type="radio" name="fidelity" id="fidelity_2" value="2" autocomplete="off" checked="checked">
-                                <span class="glyphicon glyphicon-ok">Good</span>
-                            </label>
+                       
 
-                            <!-- </label> -->
-
-                            <label class="btn btn-success active">
-                                <input type="radio" name="fidelity" id="fidelity_3" value="3" autocomplete="off">
-                                <span class="glyphicon glyphicon-ok">Full</span>
-                            </label>
-                          </div>
-
-                      <div class="form-group row float-sm-right">
-
-                        <div class="col-sm-auto">
-                            <input type="submit" name="action" value="Generate" class="btn btn-primary mb-1"></input>
-                        </div>
-
-                    
-                  </form>
-
-
-                <!-- <form name="randomizeform" id="randomizeform" method="GET"> -->
-
-                     <div class="col-sm-auto">
-                        <input type="submit" id="randomize-button" name="action" value="Randomize" class="btn btn-dark mb-1"></input>
                     </div>
-
-                <!-- </form> -->
-
-
-               
-                  <!-- <div class="container">           
-
-                <div class="well well-sm text-center">
-
-                    <h4>Fidelity</h4>
                     
-                    <div class="btn-group" data-toggle="buttons">
-                        
-                        <label class="btn btn-danger">
-                            <input type="radio" name="options" id="option2" autocomplete="off" chacked>
-                            <span class="glyphicon glyphicon-ok">None</span>
-                        </label>
-
-                        <label class="btn btn-warning">
-                            <input type="radio" name="options" id="option1" autocomplete="off">
-                            <span class="glyphicon glyphicon-ok">Minimal</span>
-                        </label>
-
-                        <label class="btn btn-info">
-                            <input type="radio" name="options" id="option2" autocomplete="off">
-                            <span class="glyphicon glyphicon-ok">Good</span>
-                        </label>
-
-                        </label>
-
-                        <label class="btn btn-success active">
-                            <input type="radio" name="options" id="option2" autocomplete="off">
-                            <span class="glyphicon glyphicon-ok">Full</span>
-                        </label>
-                    
-                    </div> 
+                </form>
 
 
-                </div>-->
 
-            </div>
 
-                  <hr>
+                <hr>
+                <p class="lead">Realism level</p>    
+                
+                <div class="btn-group col-sm-auto" data-toggle="buttons">
+                    <label class="btn btn-dark">
+                        <input type="radio" name="fidelity" id="fidelity_0" value="0" autocomplete="off"><!-- None --></input>
+                        <span class="glyphicon glyphicon-ok">None</span>
+                    </label>
+
+                    <label class="btn btn-danger">
+                        <input type="radio" name="fidelity" id="fidelity_1" value="1"  autocomplete="off">
+                        <span class="glyphicon glyphicon-ok">Minimal</span>
+                    </label>
+
+                    <label class="btn btn-info">
+                        <input type="radio" name="fidelity" id="fidelity_2" value="2" autocomplete="off" checked="checked">
+                        <span class="glyphicon glyphicon-ok">Good</span>
+                    </label>
+
+                    <label class="btn btn-success active">
+                        <input type="radio" name="fidelity" id="fidelity_3" value="3" autocomplete="off">
+                        <span class="glyphicon glyphicon-ok">Full</span>
+                    </label>
+                </div>
+
+
+                 <div class="col-sm-auto">
+                    <input type="submit" id="randomize-button" name="action" value="Randomize" class="btn btn-dark mb-1" style="position: absolute; right: 0;"></input>
+                </div>
 
                   <div id="biography" class="my-5">
                       <p class="text-justify">Victorio Presentario was a venetian researcher who was granted large funds. [SEP] His financial information comes from the compilation of documents and financial records of the Republic of Venice. His publications include:  A Catalogue of Venetian Authors, Volume 1, A Catalogue of Venetian Authors, Volume 2, A Catalogue of Venetian Artists, Volume 3, A Catalogue of Venetian Artists, Volume 4, and A Catalogue of Venetian Composers.     Presentario was born in Venice in 1524. He is first heard of in 1549, when he published a list of forty composers who had been issued between 1547 and 1563, and were either men of learning or of excellent family. Presentario's list is one of the earliest sources to document the number of composers of Venetian origin. Within the context of the early musical genre, presentario was a pioneer of the presentantian School, which was later followed by many composers of Venetian origin, including Giovanni Benedetto Ferrari, Filippo Zaniberti, Paolo Veronese and Andrea Gabrieli. The use of presentational techniques by composers from abroad was also an important factor in influencing the Venetian compositional style.</p>
                   </div>
+
             </div>
+
             <div class="col-md-3" id="decodiv">
                 <img class="img-responsive" src="/static/pngegg.png" alt="A drawing of Venice." id="decoration">
             </div>
+
+            <!-- </div> -->
+            
         </div>
     </div>
     	
