--- a/interface/static/css/main.css
+++ b/interface/static/css/main.css
@@ -70,6 +70,11 @@ div.form-group.row > div.form-group {
   padding-left: 15px;
 }
 
+div.radiochecks label {
+  background-color: rgba(0, 0, 0, 0);
+  border-color: rgba(0, 0, 0, 0);
+}
+
 form {
     margin: 7% 0 2% 0;
 }
