link server to API

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,17 +71,17 @@
                         </label>
 
                         <label class="btn" style="color:#008a20">
-                            <input type="radio" name="fidelity" id="fidelity_1" value="1"  autocomplete="off" checked="checked">
+                            <input type="radio" name="fidelity" id="fidelity_1" value="0.25"  autocomplete="off" checked="checked">
                             <span class="glyphicon glyphicon-ok">Minimal</span>
                         </label>
 
                         <label class="btn" style="color:#c3ac14">
-                            <input type="radio" name="fidelity" id="fidelity_2" value="2" autocomplete="off">
+                            <input type="radio" name="fidelity" id="fidelity_2" value="0.5" autocomplete="off">
                             <span class="glyphicon glyphicon-ok">Good</span>
                         </label>
 
                         <label class="btn" style="color:#bd2130">
-                            <input type="radio" name="fidelity" id="fidelity_3" value="3" autocomplete="off">
+                            <input type="radio" name="fidelity" id="fidelity_3" value="0.7" autocomplete="off">
                             <span class="glyphicon glyphicon-ok">Full</span>
                         </label>
                     </div>
@@ -91,7 +91,7 @@
 
 
                  <div class="col-sm-auto" id="randomize-div">
-                    <input type="submit" id="randomize-button" name="action" value="Randomize" class="btn btn-dark mb-1" style="position: absolute; right: 0;"></input>
+                    <input type="submit" id="randomize-button" name="action" value="Randomize fields" class="btn btn-dark mb-1" style="position: absolute; right: 0;"></input>
                 </div>
 
                   <div id="biography" class="my-5">
