--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,13 +32,42 @@
     }
 }
 
-/* FULL : #bd2130
-GOOD: #ffc107
-MINIMAL: #008a20
-NONE: #17a2b8;
-;
-*/
+#loading-background {
+  display: none;
+  background-color: black;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: inherit;
+}
 
+#loading {
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  animation: spin 0.6s ease-in infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
   
 #decoration {
     height: 100vh;
@@ -52,7 +81,7 @@ NONE: #17a2b8;
     top: 0;
     right: 0;
     left: 0;
-    height: 400px;
+    height: 380px;
     background-color: aliceblue;
 }
 
