--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
                 </div>
 
                   <div id="biography" class="my-5">
-                      <p class="text-justify">Augustini Zuchinni was a Venetian bard. He is said to have been born in Venice. He was a pupil of Benedetto Venier. He was in the service of the Venetian government and wrote a libretto for an opera by Giacomo Casanova. He also composed librettos for operas by Francesco Maria Piave, Francesco Maria Piave, and Giulio Cesare Marcello. While he was employed at a theatre company, Zuchin wrote librettos for his own operas. Zuchin died in Venice.'</p>
+                      <p class="text-justify">To generate a biography, simply input a name and occupation, and we will take care of the rest. If you're short on ideas, the 'Randomize fields' button will randomly generate a believable occupation and Italian name. Finally do note that the higher the fidelity/realism level, the higher the time for our model to generate a biography, on average.</p>
                   </div>
 
             </div>
@@ -107,117 +107,59 @@
             <!-- </div> -->
             
         </div>
+        <div id="loading-background"></div>
+        <div id="loading"></div>
     </div>
     	
 
-<!-- jQuery & Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- jQuery & Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-<!-- Scripts to update the page content with server's response -->
-<!-- <script>
-function ajaxSend() {
-    //Input element
-    var input = document.getElementById('randomize-button'); 
-    //Content element to show message later
-    var content = document.getElementById('biography'); 
+    <!-- Generate -->
+    <script>
+        (function($){
+            function processForm( e ){
+                $('#loading, #loading-background').fadeIn();
+                $.ajax({
+                    url: '/',
+                    dataType: 'text',
+                    type: 'post',
+                    contentType: 'application/x-www-form-urlencoded',
+                    // contentType: 'application/json',
+                    data: $(this).serialize(),
+                    success: function( data, textStatus, jQxhr ){
+                        $('#loading, #loading-background').fadeOut();
+                        $('#biography p').html( data );
+                    },
+                    error: function( jqXhr, textStatus, errorThrown ){
+                        console.log( errorThrown );
+                    }
+                });
 
-    var xhr = new XMLHttpRequest(); //New object created
-    
-    //Check for state change of this object.
-    xhr.onreadystatechange = function() {
-        // $('#biography p').html("<p>Success!</p>");
-        // if(this.readyState === 4 && this.status === 200) {
-        //     //If status is 200, show success.
-        //     // content.innerHTML = this.response; 
-        //     // content.innerHTML = this.response; 
-        //     $('#biography p').html( this.responseText );
-        // } else if(this.status === 400) {
-        //     //If status is 400, show failure
-        //     content.innerHTML = "<p>Failed.</p>"; 
+                e.preventDefault();
+            }
 
-        // } else {
-        //     //Else show working on webpage.
-        //     content.innerHTML = "<p>Working...</p>" ; 
-        // }
-        $('#biography p').html( "Hi" );
-    }
-    //Open a POST request to send data
-    xhr.open('GET', '/', true); 
-    //Send the input in query url
-    xhr.send(); 
-}
-</script> -->
+            $('#generateform').submit( processForm );
+        })(jQuery);
+    </script>
 
-<!-- Generate -->
-<script>
-    (function($){
-        function processForm( e ){
-            $.ajax({
-                url: '/',
-                dataType: 'text',
-                type: 'post',
-                contentType: 'application/x-www-form-urlencoded',
-                // contentType: 'application/json',
-                data: $(this).serialize(),
-                success: function( data, textStatus, jQxhr ){
-                    $('#biography p').html( data );
-                },
-                error: function( jqXhr, textStatus, errorThrown ){
-                    console.log( errorThrown );
-                }
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+    $(document).ready(function(){
+        $("#randomize-button").click(function(){
+            $.get("/random", function(data){
+                // Display the returned data in browser
+                var resp = JSON.parse(data);
+                var name = document.getElementById("name");
+                name.value = resp.name;
+                occupation.value = resp.occupation;
+
             });
-
-            e.preventDefault();
-        }
-
-        $('#generateform').submit( processForm );
-    })(jQuery);
-</script>
-
-<!-- Randomize -->
-<!-- <script>
-    (function($){
-        function processForm( e ){
-            $.ajax({
-                url: '/',
-                dataType: 'text',
-                type: 'get',
-                contentType: 'application/x-www-form-urlencoded',
-                // contentType: 'application/json',
-                data: $(this).serialize(),
-                success: function( data, textStatus, jQxhr ){
-                    $('#biography p').html( data );
-                },
-                error: function( jqXhr, textStatus, errorThrown ){
-                    console.log( errorThrown );
-                }
-            });
-
-            e.preventDefault();
-        }
-
-        $('#randomizeform').submit( processForm );
-    })(jQuery);
-</script> -->
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script>
-$(document).ready(function(){
-    $("#randomize-button").click(function(){
-        $.get("/random", function(data){
-            // Display the returned data in browser
-            // $("#biography").text(data);
-            var resp = JSON.parse(data);
-            var name = document.getElementById("name");
-            name.value = resp.name;
-            occupation.value = resp.occupation;
-
         });
     });
-});
-</script>
+    </script>
 
   </body>
 </html>
