small interface improvements

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -42,10 +42,12 @@
   right: 0;
   bottom: 0;
   border-radius: inherit;
+  z-index: 10;
 }
 
 #loading {
   display: none;
+  z-index: 100;
   position: absolute;
   top: 0;
   bottom: 0;
