--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
                 </div>
 
                   <div id="biography" class="my-5">
-                      <p class="text-justify">To generate a biography, simply input a name and occupation, and we will take care of the rest. If you're short on ideas, the 'Randomize fields' button will randomly generate a believable occupation and Italian name. Finally do note that the higher the fidelity/realism level, the higher the time for our model to generate a biography, on average.</p>
+                      <p class="text-justify">To generate a biography, simply input a name and occupation, and we will take care of the rest. If you're short on ideas, the 'Randomize fields' button will randomly generate a believable occupation and Italian name. <br/> Finally do note that, on average, the higher the fidelity/realism level, the more time our model will need to generate the biography.</p>
                   </div>
 
             </div>
